--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <div id="grid">
     <header>
-        <img id="logo" src="images/logo.jpg" alt="So Perfect logo">
-        <p>by Ulrika</p>
+        <div id="logo">
+            <img id="log" src="images/logo.jpg" alt="So Perfect logo">
+            <p>by Ulrika</p>
+        </div>
         <div id="navigation">
             <label for="toggle">&#9776;</label>
             <input type="checkbox" id="toggle">
@@ -23,16 +25,16 @@
                     <li><a href="#">Video</a></li>
                     <li><a href="#">About me</a></li>
                 </ul>
-
             </nav>
         </div>
+
     </header>
     <h1> This is the portfolio of the KEA`s 1st semester student Ulrika Sniedze</h1>
     <h2 id="web_head"> Web Design</h2>
     <div id="design">
         <section>
             <h3>Responsive Website</h3>
-            <img src="images/mood_350.png">
+            <img src="images/banksy.png">
         </section>
         <section>
             <h3>Website Redesign</h3>
