--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="web.html">Web Design</a></li>
-                <li><a href="#">Digital Agency</a></li>
+                <li><a href="#">Basic UX</a></li>
                 <li><a href="#">Animations</a></li>
                 <li><a href="#">Video</a></li>
                 <li><a href="#">About me</a></li>
@@ -31,38 +31,118 @@
 <div id="grid">
 
     <body>
+        <audio class="aa" src="audio/hihat.wav" type="audio/mpeg"> Your browser does not support the audio element
+    </audio>
+        <audio class="ss" src="audio/kick.wav" type="audio/mpeg"> Your browser does not support the audio element
+    </audio>
+        <audio class="dd" src="audio/openhat.wav" type="audio/mpeg"> Your browser does not support the audio element
+    </audio>
+        <audio class="ww" src="audio/snare.wav" type="audio/mpeg"> Your browser does not support the audio element
+    </audio>
+        <audio class="xx" src="audio/tom.wav" type="audio/mpeg"> Your browser does not support the audio element
+    </audio>
+        <audio class="zz" src="audio/clap.wav" type="audio/mpeg"> Your browser does not support the audio element
+    </audio>
+        <audio id="myself" src="audio/heil-myself-loud.mp3" type="audio/mpeg"> Your browser does not support the audio element
+    </audio>
         <h1 id="slogan"> This is the portfolio of the KEA`s 1st semester student Ulrika Sniedze</h1>
-        <div id="webSection">
 
-            <h2 id="web_head"> Web Design</h2>
-            <div id="design">
-                <h3>Responsive Website</h3>
-                <div class="swap">
-                </div>
+
+        <h2 id="web_head"> Web Design</h2>
+        <div id="design">
+            <h3>Responsive Website</h3>
+            <div class="swap">
+            </div>
+
+        </div>
+        <div id="redesign">
+            <h3>Website Redesign</h3>
+            <div class="swap">
 
             </div>
-            <div id="redesign">
-                <h3>Website Redesign</h3>
-                <div class="swap">
+        </div>
+        <h2 id="animation_head"> Animations</h2>
+        <div id="animations">
 
+            <div id="kungfu">
+                <h3>Simple Animations</h3>
+                <img id="panda" src="images/desktop/kung.png" alt="Panda">
+                <img id="fu" src="images/desktop/pafu.png" alt="Fu">
+            </div>
+        </div>
+
+        <div id="interactive_anim">
+            <h3>Interactive Animation</h3>
+            <div id="background">
+                <div id="trololo">
+                    <div id="mom"></div>
                 </div>
             </div>
         </div>
-        <!--<section>
-                <h3>Website Redesign</h3>
-                <img class="scalable" src="images/home-2.jpg">
+        <div id="pool1">
+            <h3>Swapping Images</h3>
+            <div id="pool1_images"></div>
+        </div>
+        <div id="pool2">
+            <h3>Drums</h3>
+            <div id="pool2_image">
+                <div class="allKeys">
+                    <div class="keys">
+                        <div class="key" id="a">
+                            <kbd>A</kbd>
+                            <span class="sound">hihat</span>
+                        </div>
+                    </div>
+                    <div class="keys">
+                        <div class="key" id="s">
+                            <kbd>S</kbd>
+                            <span class="sound">kick</span>
+                        </div>
+                    </div>
+                    <div class="keys">
+                        <div class="key" id="d">
+                            <kbd>D</kbd>
+                            <span class="sound">openhat</span>
+                        </div>
+                    </div>
+                    <div class="keys">
+                        <div class="key" id="w">
+                            <kbd>W</kbd>
+                            <span class="sound">snare</span>
+                        </div>
+                    </div>
+                    <div class="keys">
+                        <div class="key" id="x">
+                            <kbd>X</kbd>
+                            <span class="sound">tom</span>
+                        </div>
+                    </div>
+                    <div class="keys">
+                        <div class="key" id="z">
+                            <kbd>Z</kbd>
+                            <span class="sound">clap</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-            </section>-->
+        </div>
+        <div id="teaser_anim">
+            <h3>Movie Teaser</h3>
 
-        <!--<h2 id="anim_head"> Animations</h2>
-        <div id="animations">
-            <img src="">
-            <h3>Responsive Website</h3>
-            <img src="">
-            <h3>Responsive Website</h3>
+            <div id="hitler_container">
+                <div id="hitler"></div>
 
-        </div>-->
-
+            </div>
+        </div>
+        <h2 id="digital_head"> Basic UX</h2>
+        <div id="agency">
+            <h3>Digital Agency</h3>
+            <img src="images/desktop/agency.png" id="digital_page">
+        </div>
+        <div id="boat_container">
+            <img src="images/desktop/logo_lines.png" id="logoTransparent">
+        </div>
 
 
         <script src="script.js"></script>
