Changed color to dark grey

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </audio>
         <audio id="myself" src="audio/heil-myself-loud.mp3" type="audio/mpeg"> Your browser does not support the audio element
     </audio>
-        <h1 id="slogan"> This is the portfolio of the KEA`s 1st semester student Ulrika Sniedze</h1>
+        <h1 id="slogan"> This is the portfolio of the KEA`s student Ulrika Sniedze</h1>
 
 
         <h2 id="web_head"> Web Design</h2>
@@ -57,7 +57,7 @@
         </div>
         <div id="redesign">
             <h3>Website Redesign</h3>
-            <div class="swap">
+            <div id="sea">
 
             </div>
         </div>
@@ -143,7 +143,20 @@
         <div id="boat_container">
             <img src="images/desktop/logo_lines.png" id="logoTransparent">
         </div>
+        <h2 id="video_head"> Basic Video</h2>
+        <div id="alternative_video">
+            <h3>Alternative KBH</h3>
 
+            <video poster="images/desktop/background.png" id="bgvid" playsinline autoplay muted loop>
+             <source src="audio/loppenbw.mp4">
+            </video>
+
+        </div>
+        <div id="urbanite">
+            <h3>Urban Life</h3>
+            <img src="images/desktop/urban.png" id="urban">
+
+        </div>
 
         <script src="script.js"></script>
     </body>
