commit in chunks

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<header>
+<header id="index">
     <div id="logo">
         <img id="log" src="images/logo.png" alt="So Perfect logo">
         <p>by Ulrika</p>
@@ -17,12 +17,12 @@
         <input type="checkbox" id="toggle">
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="web.html">Web Design</a></li>
-                <li><a href="#">Basic UX</a></li>
-                <li><a href="#">Animations</a></li>
-                <li><a href="#">Video</a></li>
-                <li><a href="#">About me</a></li>
+                <li class="index"><a href="index.html">Home</a></li>
+                <li class="web"><a href="web.html">Web Design</a></li>
+                <li class="animations"><a href="animations.html">Animations</a></li>
+                <li class="ux"><a href="http://www.soperfect.dk/kea/04-ux/" target="_blank">Basic UX</a></li>
+                <li class="video"><a href="http://www.soperfect.dk/kea/03-video/alternativeKBH/" target="_blank">Video</a></li>
+                <li><a class="about" href="about.html">About me</a></li>
             </ul>
         </nav>
     </div>
@@ -154,14 +154,14 @@
         </div>
         <div id="urbanite">
             <h3>Urban Life</h3>
-            <img src="images/desktop/urban.png" id="urban">
+            <a href="http://www.soperfect.dk/kea/03-video/urbanite/URBANITE.mov" , target="_blank"><img src="images/desktop/urban.png" id="urban"></a>
 
         </div>
 
         <script src="script.js"></script>
     </body>
-    <footer>
-
+    <footer id="back_index">
+        <a href="index.html">Back to Top</a>
     </footer>
 </div>
 
